Wed Mar 16 15:24:09 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * ciao/Container_Base.cpp:
        * ciao/Container_Base.h:
        * ciao/Servant_Impl_Base.cpp:
        * ciao/Servant_Impl_Base.h:
        * ciao/Swapping_Container.cpp:
        * ciao/Swapping_Container.h:

          Added capabilities within the infrastruture to deactivate
          facets within a component, when the component is about
          to be uninstalled.

Wed Mar 16 12:39:21 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/UpgradeableContext.idl:
        * ciao/Upgradeable_Context_Impl_T.h:

          Added Components::InvalidName and Components::InvalidConnection
          exceptions to the exception list of the get_registered_consumers()
          operation. The actual implementation of this operation,
          generated by the CIDL compiler, uses them to check for a
          null publisher name argument, corrupt table of consumers,
          or a failed narrow from the result of a table lookup.

Thu Mar 12 10:20:17 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * ciao/UpgradeableContext.idl:
        * ciao/Upgradeable_Context_Impl_T.h:
        * ciao/Upgradeable_Context_Impl_T.cpp:

          Added a context class for the components that
          can be upgraded or dynamically swapped with new
          implementations.

Fri Mar 11 16:46:17 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * ciao/Swapping_Servant_Home_Impl_Base.cpp:
        * ciao/Swapping_Servant_Home_Impl_Base.h:
        * ciao/Swapping_Servant_Home_Impl_T.cpp:
        * ciao/Swapping_Servant_Home_Impl_T.h:

          Changed the name of the class Swapping_Servant_Home_Impl
          to Swapping_Home_Servant_Impl, to follow the naming
          convention.

Fri Mar 11 13:55:17 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* Config_Handlers/DP_Handler.cpp
	* Config_Handlers/IDD_Handler.cpp
	* Config_Handlers/IDD_Handler.h
	* Config_Handlers/PSPE_Handler.cpp
